force-app/main/default/objects/leaseworks__RFP_Proposal__c/leaseworks__RFP_Proposal__c.object-meta.xml
<CustomObject>
    <label>RFP Proposal</label>
    <nameField>
        <label>Proposal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RFP Proposals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>