force-app/main/default/objects/leaseworks__RFP_Proposal__c/fields/leaseworks__Action__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Action__c</fullName>
    <label>Follow Up Action</label>
    <type>TextArea</type>
</CustomField>