force-app/main/default/objects/leaseworks__RFP_Proposal__c/fields/leaseworks__Aircraft_Condition_Term__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Aircraft_Condition_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aircraft Condition</label>
    <referenceTo>leaseworks__Component_Return_Condition__c</referenceTo>
    <relationshipName>RFP_Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>