force-app/main/default/objects/leaseworks__RFP_Proposal__c/fields/leaseworks__Cargo_Capacity_cu_ft__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Cargo_Capacity_cu_ft__c</fullName>
    <label>Cargo Capacity (cu ft)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>