force-app/main/default/objects/leaseworks__RFP_Proposal__c/fields/leaseworks__Delivery_Ends__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Delivery_Ends__c</fullName>
    <label>Delivery Ends</label>
    <type>Date</type>
</CustomField>