force-app/main/default/objects/leaseworks__RFP_Proposal__c/fields/leaseworks__Economy__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Economy__c</fullName>
    <label>Economy</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>