force-app/main/default/objects/leaseworks__RFP_Proposal__c/fields/leaseworks__External_ID__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__External_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This hidden field is used for data loading and transferring data between instances. Only use it for mapping data during loading.</description>
    <externalId>true</externalId>
    <inlineHelpText>This hidden field is used for data loading and transferring data between instances. Only use it for mapping data during loading.</inlineHelpText>
    <label>_External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>