force-app/main/default/objects/leaseworks__RFP_Proposal__c/fields/leaseworks__First__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__First__c</fullName>
    <label>First</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>