force-app/main/default/objects/leaseworks__RFP_Proposal__c/fields/leaseworks__Fuel__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Fuel__c</fullName>
    <label>Fuel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>