force-app/main/default/objects/leaseworks__RFP_Proposal__c/fields/leaseworks__Lesor__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lesor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lessor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RFP Proposals</relationshipLabel>
    <relationshipName>RFP_Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>