force-app/main/default/objects/leaseworks__RFP_Proposal__c/fields/leaseworks__Maintenance_Reserve__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Maintenance_Reserve__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maintenance Reserve?</label>
    <type>Checkbox</type>
</CustomField>