force-app/main/default/objects/leaseworks__RFP_Proposal__c/fields/leaseworks__MTOW_lb__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MTOW_lb__c</fullName>
    <label>MTOW (lb)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>